--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -45,7 +45,10 @@ html {
 .image-hover-img {
   width: 100%;
   height: 100%;
+  // max-height: 100%;
   object-fit: cover;
+  object-position: 50% 50%;
+  // max-width: 100%;
 }
 
 .image-hover-desc {
@@ -63,9 +66,32 @@ html {
   transition: opacity .2s, visibility .2s;
 }
 
+.image-hover-caption {
+  position: absolute;
+  bottom: 0%;
+  padding: 12px 0px 4px 0px;
+  width: 100%;
+  text-align: center;
+  visibility: visible;
+  opacity: 1;
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 700;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8));
+  -webkit-text-stroke: 0.07rem black;
+  transition: .1s, opacity .2s, visibility .2s;
+}
+
 .image-hover-wrapper:hover .image-hover-desc {
   visibility: visible;
   opacity: 1;
+}
+
+.image-hover-wrapper:hover .image-hover-caption {
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(1em);
+  transition: .1s, opacity .07s, visibility .07s;
 }
 
 .image-hover-text {
