--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,6 +34,11 @@ html {
   font-family: helvetica, arial, sans-serif;
 }
 
+.image-hover-container {
+  min-height: 200px;
+  max-height: 400px;
+}
+
 .image-hover-wrapper {
   position: relative;
   width: 100%;
