More bird entries + info, life list

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -36,7 +36,7 @@ html {
 
 .image-hover-container {
   min-height: 200px;
-  max-height: 400px;
+  max-height: 24rem;
 }
 
 .image-hover-wrapper {
@@ -74,16 +74,16 @@ html {
 .image-hover-caption {
   position: absolute;
   bottom: 0%;
-  padding: 12px 0px 4px 0px;
+  padding: 20px 0px 4px 0px;
   width: 100%;
   text-align: center;
   visibility: visible;
   opacity: 1;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   color: white;
   font-weight: 700;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8));
-  -webkit-text-stroke: 0.07rem black;
+  -webkit-text-stroke: 0.04rem black;
   transition: .1s, opacity .2s, visibility .2s;
 }
 
